--- a/src/brainbay.rc
+++ b/src/brainbay.rc
@@ -788,7 +788,7 @@ CAPTION "Expression-Evaluator"
 FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Apply",IDC_EVALAPPLY,119,268,81,14,BS_FLAT
-    EDITTEXT        IDC_EVALEXPRESSION,7,17,313,246,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN
+    EDITTEXT        IDC_EVALEXPRESSION,7,17,313,246,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | ES_AUTOVSCROLL
     LTEXT           "Expression :",IDC_STATIC,7,7,39,8
 END
 
